# tree-sitter-tessera

./: .prettierrc  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.tes  testo.tes  tree-sitter.json
bindings/: .prettierrc
bindings/c/: tree-sitter-tessera.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tessera/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTessera/: tessera.h
bindings/swift/TreeSitterTesseraTests/: TreeSitterTesseraTests.swift
queries/: highlights.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
